# valor-build

./: .gitattributes  .gitignore  .gitmodules  BUILD_STRATEGY.md  LICENSE  README.md  commit_msg_session13.txt  pyproject.toml
co-design/: CHANGELOG.md  PHASE_A_FREEZE_READINESS_PLAN.md  PHASE_B_BUILD_WORKFLOW_PLAN.md  PHASE_C_BUILD_OUT_PLAN.md  PHASE_D_STABILIZATION_PLAN.md  PHASE_E_SCOPE_EXPANSION_PLAN.md  README.md  SESSION_LOG.md  VALOR_Audit_Report_v1.0.md  VALOR_Build_Readiness_Gap_Assessment_v0.3.md  VALOR_Freeze_Status_Register.md
docs/: A16_Runtime_Target_Spec.md  A17_Build_Mode_Spec.md  A18_Runtime_Mode_Model.md  B5_Project_Container.md  B6_Walking_Skeleton.md  B7_Identity_Integration.md  C1_Coverage_Matrix.md  M_IDENTITY_Verified_Identity_Spec.md
src/valor_build/: __init__.py  coverage.py  pack_access.py  project_skeleton.py  skeleton.py
src/valor_build/ai/: __init__.py  interface.py
src/valor_build/engine/: __init__.py  audit.py  authority.py  coverage_handlers.py  dispatch.py  domain.py  gates.py  handlers.py  identity.py  project.py  registry.py  schemas.py  store.py
src/valor_build/modes/: __init__.py  runtime.py
tests/: __init__.py  test_coverage_matrix.py  test_identity.py  test_identity_verified.py  test_project_container.py  test_scaffold.py  test_walking_skeleton.py
